[package]
name = "os"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.2.1"
log = "0.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
buddy_system_allocator = "0.6"
xmas-elf = "0.7.0"
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers", rev = "4ee80e5" }
easy-fs = { path = "../rCore-2024A/easy-fs" }

[profile.release]
#opt-level = 0
# debug = true
